--- a/portfolio.html
+++ b/portfolio.html
@@ -157,7 +157,7 @@
           </div>
      
      <div class="footer-right">
-      <h3 class="footer-right-title">Приєднуйсня</h3>
+      <h3 class="footer-right-title">приєднуйтесь</h3>
           <ul class="footer-links list">
               <li class="footer-item">
                   <a href="" class="footer-link">
