--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
                        </svg>
                     </a>                      
                     </li>
-                    <li href="#" class="client-item link">
-                        <a class="client-link">
+                    <li class="client-item link">
+                        <a href="#" class="client-link">
                             <svg class="client-icon">
                             <use href="./img/symbol-defs.svg#icon-Logo-2"></use>
                        </svg>
