--- a/portfolio.html
+++ b/portfolio.html
@@ -63,66 +63,77 @@
           
           <ul class="goods-list list">
             <li class="goods-list-item">
+              <a href="" class="goods-link link">
               <img src="img/imgheadphones.jpg" alt="Маркетинг" class="goods-picture" />
               <div class="goods-text-container">
               <h2 class="good-title">Проєкт Prime</h2>
-              <p class="good-text">Маркетинг</p></div>
+              <p class="good-text">Маркетинг</p>
+              </div>
+              </a>
             </li>
               
             <li class="goods-list-item">
+              <a href="" class="goods-link link">
               <img src="img/imgboxes.jpg" alt="Додаток" class="goods-picture" />
               <div class="goods-text-container">
               <h2 class="good-title">Проєкт Boxes</h2>
-              <p class="good-text">Додаток</p></div>
+              <p class="good-text">Додаток</p></div></a>
             </li>
 
             <li class="goods-list-item">
+              <a href="" class="goods-link link">
               <img src="img/imginsp.jpg" alt="Веб-сай" class="goods-picture" />
               <div class="goods-text-container">
               <h2 class="good-title">Inspiration has no Borders</h2>
-              <p class="good-text">Веб-сайт</p></div>
+              <p class="good-text">Веб-сайт</p></div></a>
             </li>
 
             <li class="goods-list-item">
+              <a href="" class="goods-link link">
               <img src="img/imgtec-crya.jpg" alt="Технокряк" class="goods-picture" />
               <div class="goods-text-container">
               <h2 class="good-title">Технокряк</h2>
-              <p class="good-text">Веб-сайт</p></div>
+              <p class="good-text">Веб-сайт</p></div></a>
             </li>
 
             <li class="goods-list-item">
+              <a href="" class="goods-link link">
               <img src="img/imgposter.jpg" alt="Постер" class="goods-picture" />
               <div class="goods-text-container">
               <h2 class="good-title">Постер New Orlean vs Golden Star</h2>
-              <p class="good-text">Дизайн</p></div>
+              <p class="good-text">Дизайн</p></div></a>
             </li>
 
             <li class="goods-list-item">
+              <a href="" class="goods-link link">
               <img src="img/imgsea.jpg" alt="Ресторан" class="goods-picture" />
               <div class="goods-text-container">
               <h2 class="good-title">Ресторан Seafood</h2>
-              <p class="good-text">Додаток</p></div>
+              <p class="good-text">Додаток</p></div></a>
             </li>
 
             <li class="goods-list-item">
+              <a href="" class="goods-link link">
               <img src="img/imgbuisnes.jpg" alt="Додаток" class="goods-picture" />
               <div class="goods-text-container">
               <h2 class="good-title">Growing Business</h2>
-              <p class="good-text">Додаток</p></div>
+              <p class="good-text">Додаток</p></div></a>
             </li>
 
             <li class="goods-list-item">
+              <a href="" class="goods-link link">
               <img src="img/imglab.jpg" alt="Маркетинг" class="goods-picture" />
               <div class="goods-text-container">
               <h2 class="good-title">Проєкт LAB</h2>
-              <p class="good-text">Маркетинг</p></div>
+              <p class="good-text">Маркетинг</p></div></a>
             </li>
 
             <li class="goods-list-item">
+              <a href="" class="goods-link link">
               <img src="img/imgle.jpg" alt="" class="goods-picture" />
               <div class="goods-text-container">
               <h2 class="good-title">Видання Limited Edition</h2>
-              <p class="good-text">Дизайн</p></div>
+              <p class="good-text">Дизайн</p></div></a>
             </li>
           </ul>
         </div>
