--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   
   <body>
-    <header>
+    <header class="portfolio">
       <div class="header container portfolio">
           <a class="header-logo" href="./index.html"><span class="blue-txt">Web</span>Studio</a>
           <nav>
@@ -168,7 +168,7 @@
           </div>
      
      <div class="footer-right">
-      <h3 class="footer-right-title">приєднуйтесь</h3>
+      <p class="footer-right-title">приєднуйтесь</p>
           <ul class="footer-links list">
               <li class="footer-item">
                   <a href="" class="footer-link">
